--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "method-override": "^3.0.0",
     "moment": "^2.29.2",
     "mongoose": "^6.2.6",
+    "nodemon": "^2.0.16",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "uuid": "^8.3.2"
