--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.17.3",
     "facebook-chat-api": "^1.8.0",
     "handlebars-dateformat": "^1.1.2",
+    "loadsh": "0.0.4",
     "method-override": "^3.0.0",
     "moment": "^2.29.3",
     "mongoose": "^6.3.3",
